# Coursework_2

./: README.md  main.py  pyproject.toml
src/: api_code.py  classes_vacancy.py  utils.py
tests/: test_api_code.py  test_classes_vacancy.py  test_utils.py
